# invoiceops_env

./: .gitignore  Dockerfile  README.md  __init__.py  batch  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  summarize_eval.py
data/scenarios/: easy.json  hard.json  medium.json  medium_plus.json
docs/: rules.md
server/: __init__.py  app.py  fixtures.py  grader.py  invoiceops_env_environment.py  reward_engine.py  scenario_loader.py
tests/: conftest.py  test_baseline_smoke.py  test_env_flow.py  test_grader.py  test_validation_smoke.py
